--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -56,8 +56,7 @@ Results
   \centering
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
-    \caption{}
-    \label{fgr:}
+    \caption{}\label{fgr:}
 \end{figure}
 
 \begin{figure}[ht]
